# ESP32-Crypto-Alert

./: .gitignore  ANALYSIS_FASE1_STAP1.md  ANALYSIS_FASE1_STAP2.md  ANALYSIS_FASE1_STAP3.md  ANALYSIS_FASE1_STAP4.md  ANALYSIS_FASE1_STAP5.md  CODE_ANALYSIS.md  CODE_INDEX.md  CODE_REVIEW_PLAN.md  CODE_REVIEW_STATUS.md  CYD_DRAM_OPTIMALISATIE_SAMENVATTING.md  ESP32-Crypto-Alert-v509.code-workspace  ESP32-Crypto-Alert.ino  FASE1_INVENTARISATIE.md  FASE4_NIEUWE_STRATEGIE.md  FASE4_PLAN.md  LCDWIKI28_ILI9341V_init.h  LICENSE  MODULE_OPTIMIZATION_GUIDELINES.md  OPTIMIZATION_PLAN_MAIN_CODE.md  PINS_CYD-ESP32-2432S024.h  PINS_CYD-ESP32-2432S028-1USB.h  PINS_CYD-ESP32-2432S028-2USB.h  PINS_ESP32S3_4848S040_ST7701_480.h  PINS_ESP32S3_AMOLED_206_CO5300.h  PINS_ESP32S3_GEEK_ST7789_114.h  PINS_ESP32S3_JC3248W535_AXS15231B.h  PINS_ESP32S3_LCDWIKI_28_ILI9341.h  PINS_ESP32S3_SuperMini_ST7789_154.h  PINS_TTGO_T_Display.h  PRIORITIZATION_FASE2.md  PROMOTE_TO_MAIN.sh  PROMOTE_TO_MAIN_COMMANDS.md  README.md  README_NL.md  README_QUICKSTART.md  README_QUICKSTART_NL.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  RELEASE_NOTES.md  (+14 more)
docs/: 00_OVERVIEW.md  00_OVERVIEW_EN.md  01-Inleiding.md  01-Introduction.md  01_ARCHITECTURE.md  01_ARCHITECTURE_EN.md  02-Features-and-Capabilities.md  02-Functies-en-Mogelijkheden.md  02_DATAFLOW.md  02_DATAFLOW_EN.md  03-Hardware-Requirements.md  03-Hardwarevereisten.md  03_ALERTING_RULES.md  03_ALERTING_RULES_EN.md  04-Installatie.md  04-Installation.md  04_UI_AND_LVGL.md  04_UI_AND_LVGL_EN.md  05-Configuratie-Web-Interface.md  05-Web-Interface-Configuration.md  05_CONFIGURATION.md  05_CONFIGURATION_EN.md  06-Core-Concepts.md  06-Kernconcepten.md  06_OPERATIONS.md  06_OPERATIONS_EN.md  07-Alert-Types-and-Examples.md  07-Alert-Types-en-Voorbeelden.md  07_GLOSSARY.md  07_GLOSSARY_EN.md  08-External-Systems-Integration.md  08-Integratie-Externe-Systemen.md  08-WebUI-Instellingen.md  08-WebUI-Settings.md  08_FAQ.md  08_FAQ_EN.md  09-Advanced-Usage-and-Customization.md  09-External-Systems-Integration.md  09-Geavanceerd-Gebruik-en-Aanpassingen.md  09-Integratie-Externe-Systemen.md  (+28 more)
firmware-v2/: .gitignore  BUILD.md  CMakeLists.txt  README.md  partitions_v2_16mb_factory.csv  partitions_v2_16mb_ota.csv  sdkconfig.defaults  (+1 more)
firmware-v2/components/app_core/: CMakeLists.txt  app_core.cpp
firmware-v2/components/app_core/include/app_core/: app_core.hpp
firmware-v2/components/exchange_bitvavo/: CMakeLists.txt  bitvavo_rest.cpp  bitvavo_ws.cpp  exchange_bitvavo.cpp  idf_component.yml  second_aggregate.cpp
firmware-v2/components/exchange_bitvavo/include/exchange_bitvavo/: exchange_bitvavo.hpp  second_aggregate.hpp
firmware-v2/components/exchange_bitvavo/include/exchange_bitvavo/detail/: rest_api.hpp  ws_api.hpp
firmware-v3/components/app_core/: CMakeLists.txt  app_core.cpp
firmware-v3/components/app_core/include/app_core/: app_core.hpp
firmware-v3/components/diagnostics/: CMakeLists.txt  diagnostics.cpp
firmware-v3/components/diagnostics/include/diagnostics/: diagnostics.hpp
firmware-v3/components/ui_model/: CMakeLists.txt  ui_model.cpp
firmware-v3/components/ui_model/include/ui_model/: ui_model.hpp
(+200 files in other folders)
